--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Test Home Page</title>
 </head>
 <body>
-    <h1>hello world!!!!!!</h1>
-    <a href="http://www.google.com"></a>
-    <link rel="stylesheet" href="http://www.google.com">
+    <h1>{{Hello World!!!!!! | | downcase }}</h1>
 </body>
 </html>
