--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Test Home Page</title>
 </head>
 <body>
-    <h1>{{ "Hello World!!!!!!" | | downcase }}</h1>
+    <h1>{{ "Hello World!!!!!!" | downcase }}</h1>
 </body>
 </html>
