--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 ---
+layout: default
 title: Home
 ---
 
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Test Home Page</title>
-</head>
-<body>
     <h1>{{ "Hello World!!" | downcase }}</h1>
-</body>
-</html>
+
