--- a/test.html
+++ b/test.html
@@ -2,13 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Test Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
 <body>
-    
+    <h1>Hello!</h1>
+    <h1>Hello2!</h1>
+    <p>Hello, this is a test page for html!</p> 
+    <a href="http://www.google.com" style="color:blue; background-color:brown"> www.google.com </a>
 </body>
 </html>
