--- a/test.html
+++ b/test.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Test Page</title>
-</head>
-<body>
+---
+layout: default
+title: test
+---
     <h1>Hello!</h1>
     <h1>Hello2!</h1>
     <p>Hello, this is a test page for html!</p> 
     <a href="http://www.google.com" style="color:blue; background-color:brown"> www.google.com </a>
-</body>
-</html>
