--- a/test2.html
+++ b/test2.html
@@ -6,3 +6,5 @@ title: test2
     <h1>Hello2!</h1>
     <p>Hello, this is a test page for html!</p> 
     <a href="http://www.google.com" style="color:blue; background-color:brown"> www.google.com </a>
+
+<script src="/test.js" type="text/javascript"></script>
