--- a/test2.html
+++ b/test2.html
@@ -7,4 +7,4 @@ title: test2
     <p>Hello, this is a test page for html!</p> 
     <a href="http://www.google.com" style="color:blue; background-color:brown"> www.google.com </a>
 
-<script src="/test.js" type="text/javascript"></script>
+<script src="/test.js"></script>
